@@ -26,4 +26,24 @@ use Test::DZil;
     );
 }
 
+{
+    my $tzil = Builder->from_config(
+        { dist_root => 't/corpus/basic' },
+        {
+            add_files => {
+                'source/dist.ini' => simple_ini(
+                    [ Prereqs => { Switch => 0 } ],
+                    [ OnlyCorePrereqs => { starting_version => '5.012', deprecated_ok => 1 } ],
+                ),
+            },
+        },
+    );
+
+    is(
+        exception { $tzil->build },
+        undef,
+        'Switch has been deprecated, but that\'s ok!',
+    );
+}
+
 done_testing;
