@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - now respecting the deprecated_ok config
 
 0.001     2013-08-17 05:22:00Z (Karen Etheridge)
           - Initial release.
